# MyWorkFlow

./: .gitignore  README.md
CppProject/: readme.md  标准cmake.md
CppProject/LMTRT/: CMakeLists.txt  LMTRT.cpp  LMTRT.h
CppProject/Sample1/: CMakeLists.txt  LMTRT.lib  library.h  main.cpp
CppProject/Sample2_thread/: CMakeLists.txt  main.cpp
CppProject/Sample2_thread/src/: AsyncExample.cpp  AsyncExample.h  StdThreadExample.cpp  StdThreadExample.h
CppProject/demo_OnnxToTrt/: CMakeLists.txt  main.cpp
CppProject/demo_OnnxToTrt/include/: OnnxToTrt.h
CppProject/demo_OnnxToTrt/src/: OnnxToTrt.cpp
CppProject/demo_Yolov26/: CMakeLists.txt  main.cpp
CppProject/demo_Yolov26/include/: Yolo26TrtInfer.h  yolodet.h
CppProject/demo_Yolov26/src/: Yolo26TrtInfer.cpp
CppProject/demo_Yolov5/: CMakeLists.txt  main.cpp  test_detector.cpp
CppProject/demo_Yolov5/include/: SimpleYolo5.h
CppProject/demo_Yolov5/src/: SimpleYolo5.cpp  yolodet.cpp
HalconProject/: 画卡尺找线.hdev  镜片定位.hdev
PythonProject/: halcon_label_convert.py
PythonProject/AutoClick/: demo.py  demoT.py  农场.json
PythonProject/LMtools/: LicenseManager.py  __init__.py  lm_log.py  lm_sql.py  lm_tools.py
PythonProject/demo_7309/: 7309_P1_remote.yaml  demo.py  detect_7309.py  export_7309.py  train_7309.py
PythonProject/my_yolo/: yolov5s-4head.yaml  yolov8_4head.yaml
PythonProject/yolov5-7.0/utils/: plots.py
模型加密工具/: read me.txt
软件注册机/: license.lc
